# Multi-Agent-Customer-Support

./: .dockerignore  .env  .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  chat_demo_v2.py  check_project.py  docker-compose.yml  main.py  prompts.txt  pyproject.toml  requirements.txt  run_evaluation.py  test_baseline.py  test_system.py  test_system_v2.py
data/: ablation_results.json  company_faqs.json  company_info.json  comparison_results.json  knowledge_base.json  product_catalog.json  test_conversations.json
scripts/: prepare_dataset.py  setup_vector_store.py
src/: config.py
src/agents/: action_agent.py  action_agent_v2.py  base_agent.py  escalation_agent.py  followup_agent.py  knowledge_agent.py  knowledge_agent_simple.py  knowledge_agent_v2.py  triage_agent.py  triage_agent_v2.py
src/api/: app.py
src/api/static/: index.html
src/baseline/: single_agent.py
src/evaluation/: ablation_study.py  metrics.py
src/orchestration/: graph.py  graph_v2.py  state.py
src/tools/: action_tools.py  knowledge_retrieval.py  mock_apis.py  product_tools.py
src/utils/: __init__.py  helpers.py  llm_client.py  rate_limit_handler.py
